<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpeningHoursFragment</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    
    <string name="group_header">Group %1$s</string>
    
    <string name="sunrise">sunrise</string>
  	<string name="sunset">sunset</string>
  	<string name="dawn">dawn</string>
  	<string name="dusk">dusk</string>
  	
  	<string name="public_holidays">Public holidays</string>
  	<string name="school_holidays">School holidays</string>
  	
  	
  	<string name="monday">Mo</string>
  	<string name="tuesday">Tu</string>
  	<string name="wednesday">We</string>
  	<string name="thursday">Th</string>
  	<string name="friday">Fr</string>
  	<string name="saturday">Sa</string>
  	<string name="sunday">Su</string>

  	<string name="january">Jan</string>
  	<string name="february">Feb</string>
  	<string name="march">Mar</string>
  	<string name="april">Apr</string>
  	<string name="may">May</string>
  	<string name="june">Jun</string>
  	<string name="july">Jul</string>
  	<string name="august">Aug</string>
  	<string name="september">Sep</string>
  	<string name="october">Oct</string>
  	<string name="november">Nov</string>
  	<string name="december">Dec</string>
  	
  	<string-array name="months" translatable="false">
  	    <item>@string/january</item>
  	    <item>@string/february</item>
  	    <item>@string/march</item>
  	    <item>@string/april</item>
  	    <item>@string/may</item>
  	    <item>@string/june</item>
  	    <item>@string/july</item>
        <item>@string/august</item>
  	    <item>@string/september</item>
  	    <item>@string/october</item>
  	    <item>@string/november</item>
  	    <item>@string/december</item>
  	</string-array>
  	
  	<string-array name="weeksdays" translatable="false">
  	    <item>@string/monday</item>
  	    <item>@string/tuesday</item>
  	    <item>@string/wednesday</item>
  	    <item>@string/thursday</item>
  	    <item>@string/friday</item>
  	    <item>@string/saturday</item>
        <item>@string/sunday</item>
  	</string-array>
  	
  	<string-array name="monthdays" translatable="false">
  	    <item>1</item>
  	    <item>2</item>
  	    <item>3</item>
  	    <item>4</item>
  	    <item>5</item>
  	    <item>6</item>
        <item>7</item>
        <item>8</item>
  	    <item>9</item>
        <item>10</item>
        <item>11</item>
  	    <item>12</item>
  	    <item>13</item>
  	    <item>14</item>
  	    <item>15</item>
  	    <item>16</item>
        <item>17</item>
        <item>18</item>
  	    <item>19</item>
        <item>20</item>
        <item>21</item>
  	    <item>22</item>
  	    <item>23</item>
  	    <item>24</item>
  	    <item>25</item>
  	    <item>26</item>
        <item>27</item>
        <item>28</item>
  	    <item>29</item>
        <item>30</item>
        <item>31</item>
  	</string-array>
  	
  	<string-array name="events" translatable="false">
  	    <item>@string/sunrise</item>
  	    <item>@string/sunset</item>
  	    <item>@string/dawn</item>
  	    <item>@string/dusk</item>
  	</string-array>
</resources>
